--- a/sections/featured-categories.liquid
+++ b/sections/featured-categories.liquid
@@ -5,8 +5,10 @@
       {% if section.settings.title != blank %}
         <h2 class="section-title">{{ section.settings.title | escape }}</h2>
       {% endif %}
-      {% if section.settings.subtitle != blank and (section.settings.show_subtitle_desktop or section.settings.show_subtitle_mobile) %}
-        <p class="section-subtitle {% if section.settings.show_subtitle_desktop == false %}desktop-hide-subtitle{% endif %} {% if section.settings.show_subtitle_mobile == false %}mobile-hide-subtitle{% endif %}">{{ section.settings.subtitle | escape }}</p>
+      {% if section.settings.subtitle != blank %}
+        {% if section.settings.show_subtitle_desktop or section.settings.show_subtitle_mobile %}
+          <p class="section-subtitle {% if section.settings.show_subtitle_desktop == false %}desktop-hide-subtitle{% endif %} {% if section.settings.show_subtitle_mobile == false %}mobile-hide-subtitle{% endif %}">{{ section.settings.subtitle | escape }}</p>
+        {% endif %}
       {% endif %}
     </div>
     {% endif %}
