--- a/sections/featured-categories.liquid
+++ b/sections/featured-categories.liquid
@@ -1,17 +1,28 @@
 <section class="featured-categories">
   <div class="container">
-    {% if section.settings.show_title_desktop or section.settings.show_title_mobile %}
-    <div class="section-header {% if section.settings.show_title_desktop == false %}desktop-hide-title{% endif %} {% if section.settings.show_title_mobile == false %}mobile-hide-title{% endif %}">
-      {% if section.settings.title != blank %}
-        <h2 class="section-title">{{ section.settings.title | escape }}</h2>
+    <div class="section-header">
+      {% assign show_title = false %}
+      {% if section.settings.show_title_desktop or section.settings.show_title_mobile %}
+        {% assign show_title = true %}
       {% endif %}
-      {% if section.settings.subtitle != blank %}
-        {% if section.settings.show_subtitle_desktop or section.settings.show_subtitle_mobile %}
-          <p class="section-subtitle {% if section.settings.show_subtitle_desktop == false %}desktop-hide-subtitle{% endif %} {% if section.settings.show_subtitle_mobile == false %}mobile-hide-subtitle{% endif %}">{{ section.settings.subtitle | escape }}</p>
-        {% endif %}
+      
+      {% if section.settings.title != blank and show_title %}
+        <h2 class="section-title {% if section.settings.show_title_desktop == false %}desktop-hide-title{% endif %} {% if section.settings.show_title_mobile == false %}mobile-hide-title{% endif %}">
+          {{ section.settings.title | escape }}
+        </h2>
+      {% endif %}
+      
+      {% assign show_subtitle = false %}
+      {% if section.settings.show_subtitle_desktop or section.settings.show_subtitle_mobile %}
+        {% assign show_subtitle = true %}
+      {% endif %}
+      
+      {% if section.settings.subtitle != blank and show_subtitle %}
+        <p class="section-subtitle {% if section.settings.show_subtitle_desktop == false %}desktop-hide-subtitle{% endif %} {% if section.settings.show_subtitle_mobile == false %}mobile-hide-subtitle{% endif %}">
+          {{ section.settings.subtitle | escape }}
+        </p>
       {% endif %}
     </div>
-    {% endif %}
     
     <!-- Desktop Grid View -->
     <div class="category-grid desktop-only">
